Fixed spacing in testimonals section, that was cause by last commit

--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ header {
 .testimonials{
   display: flex;
   align-items: center;
+  justify-content: space-evenly;
   flex-direction: column;
   width: 100%;
   height: 190vh;
